[project]
name = "headline-dpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "duckdb>=1.1.3",
    "ipykernel>=6.29.5",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
